# Datura-ai-FastAPI-Task

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migration/: env.py
migration/versions/: 2025-03-22_add_sentiment_analysis_model.py  2025-03-22_create_initial_tables.py
scripts/: entrypoint.sh
src/: config.py  constants.py  database.py  exceptions.py  main.py  utils.py
src/api/: dependencies.py  router.py
src/api/v1/endpoints/: blockchain_operations.py  tao_dividends.py
src/blockchain/: __init__.py  client.py  models.py  repository.py  schemas.py  service.py
src/cache/: redis.py
src/middleware/: __init__.py  logging.py
src/sentiment/: models.py  repository.py  schemas.py  service.py
src/tasks/: blockchain_tasks.py  test_task.py  worker.py
tests/: conftest.py  load_test.py  test_api_dependencies.py  test_blockchain_service.py  test_cache_redis.py  test_integration.py  test_sentiment_service.py
